Fix flex-wrap

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ h1 {
 
 .features {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
   margin-top: 16px;
   margin-bottom: 20px;
